# beambap

./: Cargo.toml  README.md  build.zig  build.zig.zon
compiler/: Cargo.toml  main.med
compiler/src/: lib.rs
examples/simple/: loop_add.medusa
scripts/: compile_rust.sh
src/: main.rs  main.zig  runtime.zig
vm/: Cargo.toml  spec.md
vm/src/: lib.rs  object.rs  ops.rs  process.rs  scheduler.rs  vm.rs
